res/style.scss
/* ... */
.at_commentmain {
    margin-left: 20px;
}

.at_tab {
    flex-grow: 1;
    position: relative;
    z-index: 1;
    font-family: Verdana, sans-serif !important;
    padding-left: 10px;
    padding-right: 10px;
    margin: 0;
    margin-bottom: -1px;
    margin-left: -5px;
    height: 33px;
    background-color: #f8f8f8;
    background-image: linear-gradient(to bottom,#fcfcfc 0,#f8f8f8 100%);
    overflow: hidden;
    font-size: 12px !important;
    text-shadow: 0 1px 0 rgba(255,255,255,.5);
    border: 1px solid #d3d3d3;
    color: #333;

    &:hover {
        border: 1px solid #9c9c9c;
        z-index: 50;
    }

    &:focus {
        outline: 0;
    }

    &.active {
        background-color: #fff;
        border: 1px solid #c6c6c6;
        border-bottom: 1px solid #fff;
        box-shadow: inset 0 1px 0 #ddd;
        background-image: none;
        z-index: 50;

        &:hover {
            border-bottom: 1px solid #fff;
        }
    }

    &.border {
        border-left: 1px solid #d3d3d3;
    }
}

.signedout,
.preserved  {
    & .arrow {
        pointer-events: none;
        opacity: 0.5;
    }
    & .at_submit {
        display: none;
    }
}

#at_tabcontainer {
    margin-left: 4px;
    position: relative;
    display: flex;
    flex-direction: row;
}

#at_comments {
    padding-left: 20px;
    padding-right: 20px;

    &.signedout,
    &.preserved {
        & .commentTo,
        & .at_reply,
        & .report,
        & .at_edit,
        & .at_delete,
        & .giveGold {
            display: none;
        }
    }

    &.signedout {
        & .save {
            display: none;
        }
    }
}

@-moz-document url-prefix() {
    .at_tab {
        padding-left: 8px;
        padding-right: 8px;
    }
}

#at_overflow {
    display: inline-block;
    position: relative;
    box-sizing: border-box;
    vertical-align: bottom;
    margin-left: -5px;
    width: 33px;
    height: 32px;
    background-color: #f8f8f8;
    background-image: linear-gradient(to bottom,#fcfcfc 0,#f8f8f8 100%);
    opacity: 0.5;
    border: 1px solid #d3d3d3;
    border-left: none;
    border-bottom: none;

    &:focus {
        outline: 0;
    }

    &:hover {
        opacity: 1;
    }

    & img {
        position: absolute;
        top: 50%;
        left: 8px;
    }

    & ul {
        min-width: 130px;
        max-width: 250px;
        text-overflow: ellipsis;
        padding-top: 5px;
        padding-bottom: 5px;
        box-sizing: border-box;
        opacity: 1;
        border: 1px solid #ccc;
        border-radius: 2px;
        -webkit-border-radius: 2px;
        -moz-border-radius: 2px;
        background: #fff;
        margin-top: 30px;
        display: none;
        position: relative;
        white-space: nowrap;
        float: left;
        z-index: 100;
        @include transition(opacity 1s easy-in);

        & li {
            line-height: 1.8;
            padding-left: 10px;
            padding-right: 10px;

            &:hover {
                background: #333;
                color: #fff;
            }
        }
    }
}

.at_error {
    padding-top: 20px;
    padding-bottom: 20px;
    width: 500px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;

    & img {
        max-width: 500px;
        max-height: 400px;
    }
    & h2 {
        font-size: 200%;
        font-weight: 200;
    }

    & button,
    & p {
        margin-top: 10px;
    }

}

a[href$="/s"],
a[href$="/spoiler"] {
    cursor: default;
    background: #000!important;
    color: #000!important;
    line-height: 1.4;
    border: 1px solid black;
    padding-right: 1px;
}

a[href$="/s"]:hover,
a[href$="/spoiler"]:hover {
    color: #fff !important;
}

a[href$="/s"]::before,
a[href$="/spoiler"]::before {
    background: #FFF!important;
    color: #000!important;
    padding: 0px 1px;
    margin: 0px;
    margin-right: 1px;
    content: "Spoiler";
}

.loading {
    height: 200px;
    width: 500px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;

    & > .spinner,
    & > #textContainer {
        display: inline-block;
        vertical-align: middle;
    }

    & > #textContainer {
        margin-left: 20px;

        & > h2 {
            font-size: 150%;
            font-weight: 200;
        }

        & p {
            margin-top: 10px;
        }
    }
}

.spinner {
    margin: 100px auto;
    width: 32px;
    height: 32px;
    position: relative;
}

.cube1, .cube2 {
    background-color: #ff5500;
    width: 10px;
    height: 10px;
    position: absolute;
    top: 0;
    left: 0;

    -webkit-animation: cubemove 1.8s infinite ease-in-out;
    animation: cubemove 1.8s infinite ease-in-out;
}

.cube2 {
    -webkit-animation-delay: -0.9s;
    animation-delay: -0.9s;
}

@-webkit-keyframes cubemove {
    25% { -webkit-transform: translateX(22px) rotate(-90deg) scale(0.5) }
    50% { -webkit-transform: translateX(22px) translateY(22px) rotate(-180deg) }
    75% { -webkit-transform: translateX(0px) translateY(22px) rotate(-270deg) scale(0.5) }
    100% { -webkit-transform: rotate(-360deg) }
}

@keyframes cubemove {
    25% {
        transform: translateX(42px) rotate(-90deg) scale(0.5);
        -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
    } 50% {
        /* Hack to make FF rotate in the right direction */
        transform: translateX(42px) translateY(42px) rotate(-179deg);
        -webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
    } 50.1% {
        transform: translateX(42px) translateY(42px) rotate(-180deg);
        -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
    } 75% {
        transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
        -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
    } 100% {
        transform: rotate(-360deg);
        -webkit-transform: rotate(-360deg);
    }
}
/* ... */

